# chatbot-rag

./: .dockerignore  .funcignore  .gitignore  .pre-commit-config.yaml  Dockerfile.azfn  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  diagram.md  docker-compose.yaml  pyproject.toml  requirements.txt
azure-fn/: function_app.py  host.json
backend/config/: __init__.py  blob_storage_settings.py  cosmos_db_settings.py  identity_settings.py  logging_settings.py  openai_settings.py  rag_settings.py  searchai_settings.py  settings.py
backend/src/: app.py
backend/src/core/: dependencies.py  lifespan_manager.py  logging_config.py  openapi.py  policies.py  profiler.py  warm_up.py
backend/src/infrastructure/: __init__.py  blob_storage.py  cosmos_db_sessions.py  cosmos_db_users.py  infrastructure.py  openai.py  searchai.py
backend/src/interfaces/: __init__.py  batch_interface.py  blob_storage_interface.py  change_detector_interface.py  cosmos_db_sessions_interface.py  cosmos_db_users_interface.py  image_interface.py  openai_interface.py  parser_interface.py  rag_interface.py  searchai_interface.py
backend/src/models/: __init__.py  common.py  documents.py  requests.py  responses.py
backend/src/orchestrator/prompts/: __init__.py  catalog_knowledge.py  catalog_taxonomy.py  prompt_templates.py
backend/src/orchestrator/settings/: agent_factory.py  agent_settings.py  system_prompts.py
backend/src/orchestrator/tools/: __init__.py  pdf_content.py  web_content.py
backend/src/routers/: chat.py  meta.py  sessions.py  users.py
backend/src/services/: batch_service.py  change_detection_service.py  enricher_service.py  image_service.py  parser_service.py  rag_service.py  scraper_service.py
backend/src/utils/: __init__.py  db_utils.py  identity_utils.py  prompts_utils.py  retries_utils.py  security_utils.py  text_utils.py  time_utils.py  validation_utils.py
frontend/: App.vue  README.md  api.js  index.html  package-lock.json  package.json  state.js  style.css  vite.config.js
frontend/components/: ContentChat.vue  Header.vue  InputChat.vue
frontend/components/utils/: Attachment.vue  CardAdaptative.vue  Doc.vue  HumanMessage.vue  IAMessage.vue  Map.vue  VoiceRecord.vue
frontend/views/: AuthLoader.vue  MainChat.vue
json/: chat_history.json  faq_examples.json
notebooks/: bottleneck.ipynb  ia_response.ipynb  indice.ipynb  persistencia_db.ipynb  raw_llm.ipynb  scraper.ipynb
performance/: openai_close.json  openai_create_factory.json  openai_get_image_description.json  openai_get_text_embedding.json  openai_get_texts_embedding.json  searchai_close.json  searchai_create_factory.json  searchai_create_index_if_not_exists.json  searchai_get_documents_metadata.json  searchai_upload_documents_batch.json
pipelines/: pdf_indexing_pipeline.py  web_indexing_pipeline.py
scripts/backend/: config.sh  deploy.sh
scripts/frontend/: config.sh  deploy.sh
scripts/index/: pdf_indexing.sh  web_indexing.sh
scripts/local/: azfn.sh  levantar_backend.sh  levantar_db.sh  levantar_frontend.sh
scripts/setup/: cleanup.sh  validate-env-vars.sh
tests/: conftest.py  stress.py
tests/integration/: test_indexing_integration.py  test_infrastructure.py
tests/unit/: test_agent.py  test_cosmosdb_sessions.py  test_cosmosdb_users.py
